--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,52 +1,36 @@
-# GitHub Action for generating a contribution graph with a snake eating your contributions.
-name: Generate Snake
-
-# Controls when the action will run.
+name: Metrics
 on:
-  schedule:
-      # every 12 hours
-    - cron: "0 */12 * * *"
-
-  # This command allows us to run the Action automatically from the Actions tab.
+  # Schedule updates (each hour)
+  schedule: [{cron: "0 14 * * *"}]
+  # Lines below let you run workflow manually and on each commit (optional)
   workflow_dispatch:
-  
-  # Also run on every push on the master branch
-  push:
-    branches:
-    - main
-
-# The sequence of runs in this workflow:
+  push: {branches: ["master", "main"]}
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  github-metrics:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Clone repo
-        uses: actions/checkout@v3
-    
-      - name: Generate the snake files in './dist/'
-        uses: Platane/snk@v3
-        id: snake-gif
+      # See action.yml for all options
+      - uses: lowlighter/metrics@latest
         with:
-          github_user_name: ${{ github.repository_owner }}
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/github-contribution-grid-snake.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-        env:
-           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Show build status
-        run: git status
-
-      - name: Push new files to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
-        with:
-          target_branch: output
-          build_dir: dist
-          commit_message: Update snake animations
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Your GitHub token
+          token: ${{ secrets.METRICS_TOKEN }}
+          
+          # options
+          user: Kanav-Arora
+          template: classic
+          base: header, activity, community, repositories, metadata
+          config_timezone: Asia/Calcutta
+          plugin_achievements: yes
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: C
+          plugin_habits: yes
+          plugin_habits_days: 30
+          plugin_habits_facts: yes
+          plugin_habits_from: 200
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: half-year
+#           plugin_skyline: yes
+#           plugin_skyline_year: 0            # Set to 0 to display current year
+#           plugin_skyline_frames: 60         # Use 60 frames (half-loop)
+#           plugin_skyline_quality: 0.5       # Set image quality
+#           plugin_skyline_compatibility: yes
